# CreditRisk

./: .coverage  .env  .gitignore  README.md  pyproject.toml  pytest_summary.txt
src/credit_risk/: __init__.py  config.py
src/credit_risk/api/: main.py
src/credit_risk/decision/: __init__.py  engine.py
src/credit_risk/explainability/: __init__.py  shap_explainer.py
src/credit_risk/fairness/: __init__.py  audit.py
src/credit_risk/features/: __init__.py  engineering.py
src/credit_risk/models/: __init__.py  trainer.py
src/credit_risk/monitoring/: __init__.py  drift.py
src/credit_risk/pipeline/: __init__.py  train.py
tests/: test_e2e.py
